--- a/AzureAssignment/WebRole1/Web.config
+++ b/AzureAssignment/WebRole1/Web.config
@@ -20,6 +20,7 @@
   </system.diagnostics>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebRole1-20160123120111.mdf;Initial Catalog=aspnet-WebRole1-20160123120111;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AzureDbContext" connectionString="Data Source=QUANTDSE60878\SQLEXPRESS; Initial Catalog=AzureFinalAssignment; user id=sa; password =123456; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
