--- a/AzureAssignment/AzureCoreService/AzureCoreService.csproj
+++ b/AzureAssignment/AzureCoreService/AzureCoreService.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Entity\Keyword.cs" />
     <Compile Include="Entity\News.cs" />
     <Compile Include="Entity\NewsKeyword.cs" />
+    <Compile Include="Entity\Topic.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AdRepo.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Repository\KeywordRepo.cs" />
     <Compile Include="Repository\NewsKeywordRepo.cs" />
     <Compile Include="Repository\NewsRepo.cs" />
+    <Compile Include="Repository\TopicRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
