--- a/AzureAssignment/AzureCoreService/App.config
+++ b/AzureAssignment/AzureCoreService/App.config
@@ -12,5 +12,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="AzureFinalAssignmentEntities" connectionString="metadata=res://*/TEST.AzureDbModel.csdl|res://*/TEST.AzureDbModel.ssdl|res://*/TEST.AzureDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=QUANTDSE60878\SQLEXPRESS;initial catalog=AzureFinalAssignment;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AzureDbContext" connectionString="Data Source=QUANTDSE60878\SQLEXPRESS; Initial Catalog=AzureFinalAssignment; user id=sa; password =123456; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
